P4ADEV-2004 added new action
